# video-app

./: README.md  dev-requirements.txt  main.py  main_old.py  pyproject.toml  requirements.txt  startup.sh  test.parquet
design/: menu.py  theme.py
pages/: example_pages.py  folders.py  home_page.py  media.py  pictures.py  slides.py  videos.py
pages/parquet/: parquet.py
pages/video/: videos.py
services/: secrets.py  video_api.py
utility/: parquet_operations.py
website/: header.html
